Bug 608939 - XMLHttpRequest.statusText and getAllResponseHeaders shouldn't throw, r=sicking, a=sicking

--HG--
extra : rebase_source : 5dc42964f6a216c4f10127d0ad74fe52674601d7