content/base/src/nsXMLHttpRequest.cpp
@@ -1321,15 +1321,15 @@ nsXMLHttpRequest::GetStatusText(nsACString& aStatusText)
         nsresult status;
         mChannel->GetStatus(&status);
         if (NS_FAILED(status)) {
-          return NS_ERROR_NOT_AVAILABLE;
+          return NS_OK;
         }
       }
     }
 
-    rv = httpChannel->GetResponseStatusText(aStatusText);
+    httpChannel->GetResponseStatusText(aStatusText);
   }
 
-  return rv;
+  return NS_OK;
 }
 
 /* void abort (); */
@@ -1388,23 +1388,21 @@ nsXMLHttpRequest::GetAllResponseHeaders(char **_retval)
   *_retval = nsnull;
 
   if (mState & XML_HTTP_REQUEST_USE_XSITE_AC) {
+    *_retval = ToNewCString(EmptyString());
     return NS_OK;
   }
 
   nsCOMPtr<nsIHttpChannel> httpChannel = GetCurrentHttpChannel();
 
   if (httpChannel) {
-    nsHeaderVisitor *visitor = new nsHeaderVisitor();
-    if (!visitor)
-      return NS_ERROR_OUT_OF_MEMORY;
-    NS_ADDREF(visitor);
-
+    nsRefPtr<nsHeaderVisitor> visitor = new nsHeaderVisitor();
     nsresult rv = httpChannel->VisitResponseHeaders(visitor);
     if (NS_SUCCEEDED(rv))
       *_retval = ToNewCString(visitor->Headers());
-
-    NS_RELEASE(visitor);
-    return rv;
+  }
+ 
+  if (!*_retval) {
+    *_retval = ToNewCString(EmptyString());
   }
 
   return NS_OK;
